# OrderCapture-OCR

./: .eslintrc  .pre-commit-config.yaml  Documentaion.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
ordercapture_ocr/: api.py  compare_json.py  hooks.py  modules.txt
ordercapture_ocr/gemini_ocr/: api.py  compare_json.py  test_results_json.py
ordercapture_ocr/ocr_project/: excel_excel.py  ocr_qa copy.py  ocr_qa.py  ocr_table.py  structure_data.py  structure_data_with_llm.py
ordercapture_ocr/ocr_project/big/: 427363.xls  629964.xls
ordercapture_ocr/ocr_project/flipkart/: purchase_order_FBGN05710417.xls  purchase_order_FNH3G05710702.xls  purchase_order_FPC3G05710706.xls
ordercapture_ocr/ordercapture_ocr/: sales_order_api.py
ordercapture_ocr/ordercapture_ocr/doctype/customer_item_code_mapping/: customer_item_code_mapping.js  customer_item_code_mapping.json  customer_item_code_mapping.py  test_customer_item_code_mapping.py
ordercapture_ocr/ordercapture_ocr/doctype/erpnext_field/: erpnext_field.js  erpnext_field.json  erpnext_field.py  test_erpnext_field.py
ordercapture_ocr/ordercapture_ocr/doctype/ocr_document_processor/: ocr_document_processor.js  ocr_document_processor.json  ocr_document_processor.py  test_ocr_document_processor.py
ordercapture_ocr/ordercapture_ocr/ocr_processor/: extract_excel.py  pdf_to_table.py  structure_data_with_llm.py
ordercapture_ocr/public/css/: ocr_styles.css
ordercapture_ocr/public/js/: vue.js
ordercapture_ocr/public/js/frappe/: desk.js
ordercapture_ocr/public/ordercapture_ocr/: dashboard.js
(+44 files in other folders)
